test pour calculs, non concluant

--- a/calcul2.html
+++ b/calcul2.html
@@ -10,16 +10,16 @@
   <body>
 
     <div class="interface">
-      <input type="button" value="1" onclick="chiffre(1)" id="chiffre1" />
-      <input type="button" value="2" onclick="chiffre(2)" id="chiffre2" /> <!-- premier nombre-->
-      <input type="button" value="3" onclick="chiffre(3)" id="chiffre3" />
-      <input type="button" value="4" onclick="chiffre(4)" id="chiffre4" />
-      <input type="button" value="5" onclick="chiffre(5)" id="chiffre5" /> <!-- deuxieme nombre-->
-      <input type="button" value="6" onclick="chiffre(6)" id="chiffre6" />
-      <input type="button" value="7" onclick="chiffre(7)" id="chiffre7" />
-      <input type="button" value="8" onclick="chiffre(8)" id="chiffre8" />
-      <input type="button" value="9" onclick="chiffre(9)" id="chiffre9" />
-      <input type="button" value="0" onclick="chiffre(0)" id="chiffre0" />
+      <input type="button" value="1" onclick="chiffre()" id="chiffre1" />
+      <input type="button" value="2" onclick="chiffre()" id="chiffre2" /> <!-- premier nombre (l'exercice de base etait d'additionner 2 +5)-->
+      <input type="button" value="3" onclick="chiffre()" id="chiffre3" />
+      <input type="button" value="4" onclick="chiffre()" id="chiffre4" />
+      <input type="button" value="5" onclick="chiffre()" id="chiffre5" /> <!-- deuxieme nombre-->
+      <input type="button" value="6" onclick="chiffre()" id="chiffre6" />
+      <input type="button" value="7" onclick="chiffre()" id="chiffre7" />
+      <input type="button" value="8" onclick="chiffre()" id="chiffre8" />
+      <input type="button" value="9" onclick="chiffre()" id="chiffre9" />
+      <input type="button" value="0" onclick="chiffre()" id="chiffre0" />
       <!-- opérateurs de calculs-->
       <input type="button" value="+" onclick="add()" id="plus"/> <!--addition-->
       <input type="button" value="-" onclick="soust()" id="moins"/>
